--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>BruteMD5</title>
   <meta charset="utf-8">
 
+  <script src="catiline.min.js"></script>
   <script src="md5.min.js"></script>
   <script src="brute_md5.js"></script>
 </head>
