--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
 
   <script src="catiline.min.js"></script>
+  <script src="countdown.min.js"></script>
   <script src="md5.min.js"></script>
   <script src="brute_md5.js"></script>
 </head>
