--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 <body>
   <div>
     <h1>BruteMD5</h1>
-    <h2>Decrypt MD5 Hash</h1>
+    <h2>Decrypt MD5 Hash</h2>
     <p><a href="http://passwordsgenerator.net/md5-hash-generator" target="_blank">Click here</a> to generate a md5 hash.</p>
   </div>
   <div>
-    <label for="hash">Hash:</label>
-    <input type="text" id="hash" size="32" placeholder="cfcd208495d565ef66e7dff9f98764da">
-    <button id="decrypt" onclick="decrypt()">Decrypt</button>
-    <span id="error"></span>
+    <form onsubmit="window.decrypt(); return false">
+      <label for="hash">Hash:</label>
+      <input type="text" name="hash" id="hash" size="32" placeholder="cfcd208495d565ef66e7dff9f98764da" autocomplete="">
+      <button id="decrypt" type="button">Decrypt</button>
+      <span id="error"></span>
+    </form>
   </div>
   <div>
     <label for="text">Text:</label>
@@ -28,6 +30,7 @@
     <span id="success"></span>
   </div>
   <div>
+    <label id="characters"></label>
     <ol id="progress">
     </ol>
   </div>
